<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="OnSetAvatarButton"
            app:srcCompat="@drawable/ic_logo_00" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/TeamName"
                android:layout_width="247dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:text="@string/name" />

            <TextView
                android:id="@+id/TeamNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/teamname" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/TeamLocation"
                android:layout_width="247dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:text="@string/address" />

            <TextView
                android:id="@+id/TeamLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/teamaddress" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnOpenInGoogleMaps"
            android:text="@string/map" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>